coloque logos en footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <p class="logo">Clases en linea</p>
+        <a href="index.html"><p class="logo">Clases en linea</p></a>  
         <nav>
           <a href="#somos-proya">Quienes somos</a>
           <a href="#nuestros-programas">Nuestros Programas</a>
@@ -22,7 +22,7 @@
     </header>
     <section id="hero">
       <h1>Clases Particulares  <br />En linea!</h1>
-      <button>APLICÁ YA</button>
+      <a href="template/login.html"><button>APLICÁ YA</button></a>
     </section>
     <section id="somos-proya">
       <div class="container">
@@ -111,7 +111,13 @@
         <button>Anotate Ya!</button>
     </section>
     <footer>
-        <div class="container">
+      <div class="container">
+      <div class="iconos">
+        <a href="https://www.facebook.com" target="_blank"><img src="template/iconos/facebook.png" alt=""></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="template/iconos/instagram.png" alt=""></a>
+        <a href="https://wa.me/1522527808" target="_blank"><img src="template/iconos/whatsapp.png" alt=""></a>
+      </div>
+        
             <p>&copy; Codo a Codo 2023</p>
         </div>
         </footer>
