link a iconos y link a anotate ya

--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@
     </section>
     <section id="final">
         <h2>Listo para Comenzar?</h2>
-        <button>Anotate Ya!</button>
+        <a href="template/login.html"><button>Anotate Ya!</button></a>
     </section>
     <footer>
+      <div class="texto__footer">
+        <p>Nuestras redes</p>
+      </div>
       <div class="container">
       <div class="iconos">
         <a href="https://www.facebook.com" target="_blank"><img src="template/iconos/facebook.png" alt=""></a>
@@ -120,6 +123,7 @@
         
             <p>&copy; Codo a Codo 2023</p>
         </div>
+      
         </footer>
   </body>
 </html>
