--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section id="hero">
       <h1>Clases Particulares  <br />En linea!</h1>
-      <button>APLICÁ YA</button>
+      <button class="button__aplica"><a href="/template/login.html">APLICÁ YA</a></button>
     </section>
     <section id="somos-proya">
       <div class="container">
@@ -30,10 +30,7 @@
         <div class="texto">
         <h2>No te quedes atras  y aprende con los <span class="color-acento">Mejores!</span></h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-          facilis distinctio repellendus, sit asperiores dicta alias fugit
-          provident! Officiis, aliquid. Vero fugit quae repudiandae dignissimos
-          maiores id ad neque dolor.
+          Somos líderes en la educación en línea porque fusionamos una enseñanza de alta calidad con una tecnología avanzada y un enfoque centrado en el estudiante. Estamos dedicados a empoderar a nuestros alumnos con las habilidades y el conocimiento que necesitan para alcanzar el éxito en el mundo actual.
         </p>
       </div>
     </div>
@@ -108,7 +105,7 @@
     </section>
     <section id="final">
         <h2>Listo para Comenzar?</h2>
-        <button>Anotate Ya!</button>
+        <a href="template/login.html" class="button__anotateYa"><button>Anotate Ya!</button></a>
     </section>
     <footer>
         <div class="container">
